fix: update home hero text to be centered align

--- a/assets/tailwind-output.css
+++ b/assets/tailwind-output.css
@@ -1561,6 +1561,10 @@ video {
   padding-top: 1.5rem;
 }
 
+.text-center {
+  text-align: center;
+}
+
 .text-justify {
   text-align: justify;
 }
